--- a/Resume/iPortfolio/iPortfolio/index.html
+++ b/Resume/iPortfolio/iPortfolio/index.html
@@ -53,7 +53,7 @@
           <!-- <a href="#" class="twitter"><i class="bx bxl-twitter"></i></a> -->
           <a href="https://www.facebook.com/Tarunkumarkommoju" class="facebook"><i class="bx bxl-facebook"></i></a>
           <a href="https://instagram.com/tarun_kumar_kommoju?igshid=ZGUzMzM3NWJiOQ==" class="instagram"><i class="bx bxl-instagram"></i></a>
-          <!-- <a href="#" class="google-plus"><i class="bx bxl-skype"></i></a> -->
+          <a href="https://github.com/TarunkumarK10" class="google-plus"><i class="bx bxl-github"></i></a>
           <a href="https://www.linkedin.com/in/tarunkumar-kommoju-783b59226?lipi=urn%3Ali%3Apage%3Ad_flagship3_profile_view_base_contact_details%3BYLegNoh7S4qtpUtwq%2FtJqA%3D%3D" class="linkedin"><i class="bx bxl-linkedin"></i></a>
         </div>
       </div>
